# automate_transfer_files_and_jpd_compare_report

./: .gitignore  plan.md
.github/workflows/: ci.yml
jfrog-transfer-automation/: INSTALL.md  PACKAGING.md  QUICKSTART.md  README.md  SCHEDULER_GUIDE.md  TROUBLESHOOTING.md  VERSIONING.md  config.sample.yaml  pyproject.toml  requirements.txt
jfrog-transfer-automation/scripts/: install.ps1  install.sh
jfrog-transfer-automation/src/jfrog_transfer_automation/cli/: main.py
jfrog-transfer-automation/src/jfrog_transfer_automation/config/: loader.py  model.py
jfrog-transfer-automation/src/jfrog_transfer_automation/jfrog/: artifactory_api.py  auth.py  cli.py
jfrog-transfer-automation/src/jfrog_transfer_automation/logging/: setup.py
jfrog-transfer-automation/src/jfrog_transfer_automation/notify/: emailer.py  webhook.py
jfrog-transfer-automation/src/jfrog_transfer_automation/report/: compare_adapter.py  generator.py
jfrog-transfer-automation/src/jfrog_transfer_automation/transfer/: locks.py  repo_list.py  runner.py
jfrog-transfer-automation/src/jfrog_transfer_automation/util/: time.py
jfrog-transfer-automation/tests/: test_config.py  test_locking.py  test_repo_list.py  test_report_generator.py  test_schedule.py
test_schedule/: all_local_repos_in_prod.txt  config.yaml
tune-transfer-files/: config.yaml
